// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModuleCategories  Library closed  Renders with list of ModuleCategory components 1`] = `
<DragDropContextProvider
  backend={[Function]}
>
  <ModuleCategories
    addModule={[Function]}
    dropModule={[Function]}
    isReadOnly={false}
    items={
      Array [
        Object {
          "author": "Workbench",
          "category": "Add data",
          "description": "Connect a dataset from Enigma's collection via URL.",
          "icon": "url",
          "id": 4,
          "link": "",
          "name": "Load from Enigma",
        },
        Object {
          "author": "Workbench",
          "category": "Filter",
          "description": "Filter rows by matching text in specific columns.",
          "icon": "filter",
          "id": 10,
          "link": "",
          "name": "Filter by Text",
        },
      ]
    }
    libraryOpen={false}
    openCategory="Add Data"
    setOpenCategory={[Function]}
  >
    <div
      className="list"
    >
      <ModuleCategory
        collapsed={true}
        isReadOnly={false}
        libraryOpen={false}
        modules={
          Array [
            <DragSource(Module)
              addModule={[Function]}
              dropModule={[Function]}
              icon="url"
              id={4}
              name="Load from Enigma"
          />,
          ]
        }
        name="Add data"
        setOpenCategory={[Function]}
      >
        <div
          className="card b-l-gray library-card-category-closed"
        >
          <div
            className="ml-cat"
          >
            <div
              className="first-level"
              onMouseEnter={[Function]}
            >
              <div
                className="closed-ML-cat"
              >
                <span
                  className="icon-url ml-icon"
                />
              </div>
            </div>
            <div
              className="ml-list-mini"
              style={
                Object {
                  "display": "none",
                }
              }
            >
              <DragSource(Module)
                addModule={[Function]}
                dropModule={[Function]}
                icon="url"
                id={4}
                name="Load from Enigma"
              >
                <Module
                  addModule={[Function]}
                  connectDragSource={[Function]}
                  dropModule={[Function]}
                  icon="url"
                  id={4}
                  isDragging={false}
                  name="Load from Enigma"
                >
                  <div
                    className="card ml-module-card"
                  >
                    <div
                      className=""
                      onClick={[Function]}
                    >
                      <div
                        className="second-level d-flex"
                      >
                        <div
                          className="d-flex flex-row align-items-center"
                        >
                          <div
                            className="ml-icon-container"
                          >
                            <div
                              className="icon-url ml-icon"
                            />
                          </div>
                          <div>
                            <div
                              className="content-5 ml-module-name"
                            >
                              Load from Enigma
                            </div>
                          </div>
                        </div>
                        <div
                          className="ml-handle"
                        >
                          <div
                            className="icon-grip"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </Module>
              </DragSource(Module)>
            </div>
          </div>
        </div>
      </ModuleCategory>
      <ModuleCategory
        collapsed={true}
        isReadOnly={false}
        libraryOpen={false}
        modules={
          Array [
            <DragSource(Module)
              addModule={[Function]}
              dropModule={[Function]}
              icon="filter"
              id={10}
              name="Filter by Text"
          />,
          ]
        }
        name="Filter"
        setOpenCategory={[Function]}
      >
        <div
          className="card b-l-gray library-card-category-closed"
        >
          <div
            className="ml-cat"
          >
            <div
              className="first-level"
              onMouseEnter={[Function]}
            >
              <div
                className="closed-ML-cat"
              >
                <span
                  className="icon-filter ml-icon"
                />
              </div>
            </div>
            <div
              className="ml-list-mini"
              style={
                Object {
                  "display": "none",
                }
              }
            >
              <DragSource(Module)
                addModule={[Function]}
                dropModule={[Function]}
                icon="filter"
                id={10}
                name="Filter by Text"
              >
                <Module
                  addModule={[Function]}
                  connectDragSource={[Function]}
                  dropModule={[Function]}
                  icon="filter"
                  id={10}
                  isDragging={false}
                  name="Filter by Text"
                >
                  <div
                    className="card ml-module-card"
                  >
                    <div
                      className=""
                      onClick={[Function]}
                    >
                      <div
                        className="second-level d-flex"
                      >
                        <div
                          className="d-flex flex-row align-items-center"
                        >
                          <div
                            className="ml-icon-container"
                          >
                            <div
                              className="icon-filter ml-icon"
                            />
                          </div>
                          <div>
                            <div
                              className="content-5 ml-module-name"
                            >
                              Filter by Text
                            </div>
                          </div>
                        </div>
                        <div
                          className="ml-handle"
                        >
                          <div
                            className="icon-grip"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </Module>
              </DragSource(Module)>
            </div>
          </div>
        </div>
      </ModuleCategory>
    </div>
  </ModuleCategories>
</DragDropContextProvider>
`;

exports[`ModuleCategories  Library open  Renders with list of ModuleCategory components 1`] = `
<DragDropContextProvider
  backend={[Function]}
>
  <ModuleCategories
    addModule={[Function]}
    dropModule={[Function]}
    isReadOnly={false}
    items={
      Array [
        Object {
          "author": "Workbench",
          "category": "Add data",
          "description": "Connect a dataset from Enigma's collection via URL.",
          "icon": "url",
          "id": 4,
          "link": "",
          "name": "Load from Enigma",
        },
        Object {
          "author": "Workbench",
          "category": "Filter",
          "description": "Filter rows by matching text in specific columns.",
          "icon": "filter",
          "id": 10,
          "link": "",
          "name": "Filter by Text",
        },
      ]
    }
    libraryOpen={true}
    openCategory="Add Data"
    setOpenCategory={[Function]}
  >
    <div
      className="list"
    >
      <ModuleCategory
        collapsed={true}
        isReadOnly={false}
        libraryOpen={true}
        modules={
          Array [
            <DragSource(Module)
              addModule={[Function]}
              dropModule={[Function]}
              icon="url"
              id={4}
              name="Load from Enigma"
          />,
          ]
        }
        name="Add data"
        setOpenCategory={[Function]}
      >
        <div
          className="card b-l-gray library-card-category-closed"
        >
          <div
            className="ml-cat"
          >
            <div
              className="first-level"
              onClick={[Function]}
            >
              <div
                className="cat-container"
              >
                <span
                  className="open-ML-cat"
                >
                  Add data
                </span>
                <div
                  className="ml-sort icon-sort-down-vl-gray"
                />
              </div>
            </div>
            <Collapse
              delay={
                Object {
                  "hide": 350,
                  "show": 350,
                }
              }
              isOpen={false}
              onClosed={[Function]}
              onOpened={[Function]}
              tag="div"
            >
              <div
                className="collapse"
                style={Object {}}
              >
                <div
                  className="ml-list"
                >
                  <DragSource(Module)
                    addModule={[Function]}
                    dropModule={[Function]}
                    icon="url"
                    id={4}
                    name="Load from Enigma"
                  >
                    <Module
                      addModule={[Function]}
                      connectDragSource={[Function]}
                      dropModule={[Function]}
                      icon="url"
                      id={4}
                      isDragging={false}
                      name="Load from Enigma"
                    >
                      <div
                        className="card ml-module-card"
                      >
                        <div
                          className=""
                          onClick={[Function]}
                        >
                          <div
                            className="second-level d-flex"
                          >
                            <div
                              className="d-flex flex-row align-items-center"
                            >
                              <div
                                className="ml-icon-container"
                              >
                                <div
                                  className="icon-url ml-icon"
                                />
                              </div>
                              <div>
                                <div
                                  className="content-5 ml-module-name"
                                >
                                  Load from Enigma
                                </div>
                              </div>
                            </div>
                            <div
                              className="ml-handle"
                            >
                              <div
                                className="icon-grip"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </Module>
                  </DragSource(Module)>
                </div>
              </div>
            </Collapse>
          </div>
        </div>
      </ModuleCategory>
      <ModuleCategory
        collapsed={true}
        isReadOnly={false}
        libraryOpen={true}
        modules={
          Array [
            <DragSource(Module)
              addModule={[Function]}
              dropModule={[Function]}
              icon="filter"
              id={10}
              name="Filter by Text"
          />,
          ]
        }
        name="Filter"
        setOpenCategory={[Function]}
      >
        <div
          className="card b-l-gray library-card-category-closed"
        >
          <div
            className="ml-cat"
          >
            <div
              className="first-level"
              onClick={[Function]}
            >
              <div
                className="cat-container"
              >
                <span
                  className="open-ML-cat"
                >
                  Filter
                </span>
                <div
                  className="ml-sort icon-sort-down-vl-gray"
                />
              </div>
            </div>
            <Collapse
              delay={
                Object {
                  "hide": 350,
                  "show": 350,
                }
              }
              isOpen={false}
              onClosed={[Function]}
              onOpened={[Function]}
              tag="div"
            >
              <div
                className="collapse"
                style={Object {}}
              >
                <div
                  className="ml-list"
                >
                  <DragSource(Module)
                    addModule={[Function]}
                    dropModule={[Function]}
                    icon="filter"
                    id={10}
                    name="Filter by Text"
                  >
                    <Module
                      addModule={[Function]}
                      connectDragSource={[Function]}
                      dropModule={[Function]}
                      icon="filter"
                      id={10}
                      isDragging={false}
                      name="Filter by Text"
                    >
                      <div
                        className="card ml-module-card"
                      >
                        <div
                          className=""
                          onClick={[Function]}
                        >
                          <div
                            className="second-level d-flex"
                          >
                            <div
                              className="d-flex flex-row align-items-center"
                            >
                              <div
                                className="ml-icon-container"
                              >
                                <div
                                  className="icon-filter ml-icon"
                                />
                              </div>
                              <div>
                                <div
                                  className="content-5 ml-module-name"
                                >
                                  Filter by Text
                                </div>
                              </div>
                            </div>
                            <div
                              className="ml-handle"
                            >
                              <div
                                className="icon-grip"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </Module>
                  </DragSource(Module)>
                </div>
              </div>
            </Collapse>
          </div>
        </div>
      </ModuleCategory>
    </div>
  </ModuleCategories>
</DragDropContextProvider>
`;
